--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 <body>
     <div class="header">
         <div class="logo">Header Logo</div>
-        <div class="link">header link one</div>
-        <div class="link">header link two</div>
-        <div class="link">header link three</div>
+        <div class="links">
+            <ul>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
