--- a/index.html
+++ b/index.html
@@ -18,5 +18,46 @@
             </ul>
         </div>
     </div>
+    <div class="hero">
+        <div class="lefttext">
+            <div class="main">
+                This website is awesome
+            </div>
+            <div class="secondary">
+                This website has some subtext that goes under the main title. It's smaller font and the color is lower contrast.
+            </div>
+            <button class="signup">
+                Sign Up
+            </button>
+        </div>
+        <div class="rightpic">
+            <div>
+                This is a placeholder for an image.
+            </div>
+        </div>
+    </div>
+    <div class="information">
+        <div class="info">
+            Some random information.
+        </div>
+        <div class="container">
+            <div class="card">
+                <div class="card-img"></div>
+                <p>this is some subtext under an illustration or an image</p>
+            </div>
+            <div class="card">
+                <div class="card-img"></div>
+                <p>this is some subtext under an illustration or an image</p>
+            </div>
+            <div class="card">
+                <div class="card-img"></div>
+                <p>this is some subtext under an illustration or an image</p>
+            </div>
+            <div class="card">
+                <div class="card-img"></div>
+                <p>this is some subtext under an illustration or an image</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
