--- a/index.html
+++ b/index.html
@@ -65,5 +65,12 @@
         </em>
         <div id="signature"><p>-Thor, God of Thunder</p></div>
     </div>
+    <div class="call-to-action">
+        <div class="sign-up">
+            <strong>Call to action! It's time!</strong>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button>Sign up</button>
+    </div>
 </body>
 </html>
