--- a/index.html
+++ b/index.html
@@ -5,72 +5,86 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Landing page</title>
+    <title>Joe Joeman's manifesto</title>
 </head>
 <body>
     <div class="header">
-        <div class="logo">Header Logo</div>
+        <div class="logo">Joe Joeman</div>
         <div class="links">
             <ul>
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
+                <li><a href="https://www.twitch.tv/mylque" target="_blank">Twitch</a></li>
+                <li><a href="https://www.youtube.com/@Mylque-ing" target="_blank">YouTube</a></li>
+                <li><a href="https://discord.gg/huWvhmFtWg" target="_blank">Discord</a></li>
             </ul>
         </div>
     </div>
     <div class="hero">
         <div class="lefttext">
             <div class="main">
-                This website is awesome
+                Who is Joe Joeman?
             </div>
             <div class="secondary">
-                This website has some subtext that goes under the main title. It's smaller font and the color is lower contrast.
+                Our marvelous hero, Joe Joeman, was once the weakest man in Skyrim and he has an ambitious goal. To become the High king of Skyrim. Join him on his (mis)adventures with Faendal, Meeko and flavor of the week horse.
+                Joe is not the Dragonborn, he's just an average joe, he has to eat, drink, sleep, bathe and survive harsh environment of Skyrim. He has no natural magical talents, starting with all skills at level one and he can't learn shouts.
             </div>
-            <button class="signup">
-                Sign Up
+            <button class="signup" onclick="location.href='https://www.youtube.com/@Mylque-ing'" target="_blank">
+                Watch now
             </button>
         </div>
         <div class="rightpic">
-            <div>
-                This is a placeholder for an image.
-            </div>
+            <img src="Joe.png">
         </div>
     </div>
     <div class="information">
         <div class="info">
-            Some random information.
+            Hall of horses
         </div>
         <div class="container">
             <div class="card">
-                <div class="card-img"></div>
-                <p>this is some subtext under an illustration or an image</p>
+                <div class="card-img">
+                    <img src="">
+                </div>
+                <p>Frost</p>
             </div>
             <div class="card">
                 <div class="card-img"></div>
-                <p>this is some subtext under an illustration or an image</p>
+                <p>Cool Tony (Not a horse)</p>
             </div>
             <div class="card">
                 <div class="card-img"></div>
-                <p>this is some subtext under an illustration or an image</p>
+                <p>Jeffery (Not a Stormcloak)</p>
             </div>
             <div class="card">
                 <div class="card-img"></div>
-                <p>this is some subtext under an illustration or an image</p>
+                <p>Mayo</p>
+            </div>
+            <div class="card">
+                <div class="card-img"></div>
+                <p>Ketchup</p>
+            </div>
+            <div class="card">
+                <div class="card-img"></div>
+                <p><s>Queen Allie</s> (Coming soon)</p>
             </div>
         </div>
     </div>
     <div class="quote-container">
         <em>
-            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+            It's Joeing time!
         </em>
-        <div id="signature"><p>-Thor, God of Thunder</p></div>
+        <div id="signature"><p>-Joe Joeman, Future High king</p></div>
     </div>
     <div class="call-to-action">
         <div class="sign-up">
-            <strong>Call to action! It's time!</strong>
-            <p>Sign up for our product by clicking that button right over there!</p>
+            <strong>High King checklist:</strong>
+            <ul>   
+                <li>5,874/50,000 gold</li>
+                <li>3/9 thaneship in holds</li>
+                <li><s>20/20 citizens helped</s></li>
+                <li><s>1/1 Ulfric defeated</s></li>
+            </ul>
         </div>
-        <button>Sign up</button>
+<!--        <button>Sign up</button>-->
     </div>
     <div class="footer">
         Copyright © The Odin Project 2021
